--- a/public/view/titlebar.html
+++ b/public/view/titlebar.html
@@ -1,3 +1,6 @@
+<div id="navigation-container">
+                <button id="back-button" class="nav-button" title="Zpět">
+
 
             <div id="navigation-container">
                 <button id="back-button" class="nav-button" title="Zpět">
